# Atmopy

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  info.rc
atmopy/: __init__.py  atmo.py  wrapper.py
atmopy/core/: interp.cpp  interp.hpp
atmopy/data/: __init__.py  a.csv  d.csv  g.csv  h.csv  p.csv  t.csv
